# C-C-

./: CMakeLists.txt  README.md  README.md~
data-structure/linked-list/: linked_list.c
data-structure/list/: list.h
data-structure/queue/: queue.c
data-structure/tree/: _test_.c  tree.c  tree.h
data_structure/: linked_list.c  list.c  list.h
data_structure/linked-list/: linked_list.h
data_structure/list/: list.c
data_structure/queue/: queue.h
queue/: _test_.c
syntax/: zeno  zeno.c  zeno.c~
syntax/io_char/: guess.c
syntax/point/: declare.c
